--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "node.js introduction",
   "main": "index.js",
   "dependencies": {
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
     "formidable": "^2.0.1",
+    "lodash": "^4.17.21",
     "nodemailer": "^6.7.7",
     "upper-case": "^2.0.2",
     "uuid": "^8.3.2"
