--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "express": "^4.18.1",
     "formidable": "^2.0.1",
     "lodash": "^4.17.21",
+    "mongoose": "^6.4.4",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
     "upper-case": "^2.0.2",
     "uuid": "^8.3.2"
