--- a/external-resources/assignments/mdn-express/local-library-tutorial/package.json
+++ b/external-resources/assignments/mdn-express/local-library-tutorial/package.json
@@ -2,6 +2,9 @@
   "name": "local-library-tutorial",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "14.20.0"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
