--- a/inventory-app/package.json
+++ b/inventory-app/package.json
@@ -18,6 +18,9 @@
     "luxon": "^3.0.3",
     "mongoose": "^6.5.3",
     "morgan": "~1.9.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "prompt": "^1.3.0",
+    "prompt-sync": "^4.2.0",
+    "prompt-sync-history": "^1.0.1"
   }
 }
