--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
-    "serverstart": "DEBUG=inventory-app:* npm run devstart"
+    "serverstart": "npm run devstart"
   },
   "dependencies": {
     "async": "^3.2.4",
