--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "inventory-app",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": "14.20.0"
+  },
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
