--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
     "mongoose": "^6.6.1",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
