--- a/addtionals-resources/.env
+++ b/addtionals-resources/.env
@@ -1,1 +1,3 @@
-DB_STRING="mongodb://ab:1234@localhost:27017/?authMechanism=DEFAULT"
+DB_STRING="mongodb://localhost:27017/"
+
+# DB_STRING="mongodb://ab:1234@localhost:27017/?authMechanism=DEFAULT"
