--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DB_STRING = "mongodb+srv://ab:1234@authbasiccluster.ajmdkxv.mongodb.net/auth-lb?retryWrites=true&w=majority"
+DB_STRING = "mongodb+srv://ab:1234@authbasiccluster.ajmdkxv.mongodb.net/memebers-only?retryWrites=true&w=majority"
+
+SECRET = "1ab2c3d4!Q@W#E$R"
