--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
     "upper-case": "^2.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "connect-mongo": "^3.1.2",
+    "dotenv": "^8.2.0",
+    "express-session": "^1.17.0",
+    "nodemon": "^2.0.20",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.21.0",
@@ -22,8 +28,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node crash-course.nodejs-index.js",
-    "dev": "nodemon crash-course.nodejs-index.js",
+    "start": "node app.js",
+    "devstart": "nodemon app.js",
     "lint": "eslint *.js"
   },
   "author": "a b",
