--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "description": "node.js introduction",
   "main": "index.js",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^3.1.2",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.0",
+    "express-validator": "^6.14.2",
     "formidable": "^2.0.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
-    "upper-case": "^2.0.2",
-    "uuid": "^8.3.2",
-    "connect-mongo": "^3.1.2",
-    "dotenv": "^8.2.0",
-    "express-session": "^1.17.0",
     "nodemon": "^2.0.20",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "upper-case": "^2.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^8.21.0",
