--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "node.js introduction",
   "main": "index.js",
   "dependencies": {
+    "async": "^3.2.4",
     "bcryptjs": "^2.4.3",
     "connect-mongo": "^3.1.2",
     "dotenv": "^8.2.0",
