--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-validator": "^6.14.2",
     "formidable": "^2.0.1",
     "lodash": "^4.17.21",
+    "luxon": "^3.0.4",
     "moment": "^2.29.4",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
