--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.14.2",
     "formidable": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "luxon": "^3.0.4",
     "moment": "^2.29.4",
