--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.20",
     "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "upper-case": "^2.0.2",
     "uuid": "^8.3.2"
