--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "async": "^3.2.4",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.1",
     "connect-mongo": "^3.1.2",
     "cors": "^2.8.5",
     "curl": "^0.1.4",
