--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "async": "^3.2.4",
+    "base64url": "^3.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "connect-mongo": "^3.1.2",
