--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.14.2",
     "formidable": "^2.0.1",
+    "jest": "^29.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "luxon": "^3.0.4",
@@ -34,10 +35,11 @@
   },
   "devDependencies": {
     "eslint": "^8.21.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "supertest": "^6.3.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "tests": "node tests/index.js",
     "start": "node app.js",
     "devstart": "nodemon app.js",
     "lint": "eslint *.js"
