--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "eslint": "^8.21.0",
+    "mongodb-memory-server": "^8.9.3",
     "nodemon": "^2.0.19",
     "supertest": "^6.3.0"
   },
