--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "eslint": "^8.21.0",
     "mongodb-memory-server": "^8.9.3",
     "nodemon": "^2.0.19",
