--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,9 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@fontsource/roboto": "^4.5.8",
+    "@giphy/js-fetch-api": "^4.4.0",
+    "@giphy/js-types": "^4.2.1",
+    "@giphy/react-components": "^6.2.0",
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.104",
     "@mui/material": "^5.10.10",
@@ -13,6 +16,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.2.0",
+    "emoji-picker-react": "^4.4.3",
     "material-ui-colors": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-window": "^1.8.7",
     "styled-components": "^5.3.6",
+    "tinymce": "^6.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
