--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@tinymce/tinymce-react": "^4.2.0",
     "emoji-picker-react": "^4.4.3",
     "material-ui-colors": "^1.0.0",
+    "needle": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.4.2",
@@ -27,6 +28,8 @@
     "react-window": "^1.8.7",
     "styled-components": "^5.3.6",
     "tinymce": "^6.2.0",
+    "twitter": "^1.7.1",
+    "twitter-api-v2": "^1.12.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,5 +55,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-env": "^1.2.3"
   }
 }
