--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "moment": "^2.29.4",
     "mongoose": "^6.4.4",
     "morgan": "^1.10.0",
+    "needle": "^3.1.0",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.20",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "twitter-api-v2": "^1.12.9",
     "upper-case": "^2.0.2",
     "uuid": "^8.3.2"
   },
