--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "needle": "^3.1.0",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.20",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "qs": "^6.11.0",
