--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "connect-mongo": "^3.1.2",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "curl": "^0.1.4",
     "dotenv": "^8.2.0",
