--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.2.0",
+    "axios": "^1.1.3",
     "emoji-picker-react": "^4.4.3",
     "material-ui-colors": "^1.0.0",
     "needle": "^3.1.0",
