--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.17.0",
     "express-validator": "^6.14.2",
     "formidable": "^2.0.1",
+    "http-proxy-middleware": "^2.0.6",
     "jest": "^29.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
