--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "nodemon": "^2.0.20",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
+    "passport-github": "^1.1.0",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "qs": "^6.11.0",
     "twitter-api-v2": "^1.12.9",
     "upper-case": "^2.0.2",
