--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-twitter-embed": "^4.0.4",
     "react-window": "^1.8.7",
     "styled-components": "^5.3.6",
     "tinymce": "^6.2.0",
